--- a/templates/update-recipe.html
+++ b/templates/update-recipe.html
@@ -28,6 +28,16 @@
     </div>
 </nav>
 
+<section>
+    {% with messages = get_flashed_messages() %} {% if messages %}
+    <ul class="flashes yellow accent-1">
+        {% for message in messages %}
+        <li>{{ message }}</li>
+        {% endfor %}
+    </ul>
+    {% endif %} {% endwith %}
+</section>
+
 {% endblock %}
 
 
